# python/xpctl/swagger_server/models/__init__.py
@@ -4,6 +4,7 @@
 from __future__ import absolute_import
 # import models into model package
 from swagger_server.models.aggregate_result import AggregateResult
+from swagger_server.models.aggregate_result_values import AggregateResultValues
 from swagger_server.models.experiment import Experiment
 from swagger_server.models.experiment_aggregate import ExperimentAggregate
 from swagger_server.models.response import Response
